UtahLiveDataTest/src/objects/ReviewPanel__c.object
<CustomObject>
    <description>[Business] Defines the Review Panel to review the Applications</description>
    <fields>
        <fullName>AnnoucementId__c</fullName>
        <formula>ReviewStep__r.AnnouncementId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementName__c</fullName>
        <formula>ReviewStep__r.AnnouncementName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementNumber__c</fullName>
        <formula>ReviewStep__r.AnnouncementNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationsCount__c</fullName>
        <label>No. of Applications</label>
        <summaryForeignKey>PanelApplication__c.ReviewPanel__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AutoAssignSubmittedApplication__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Announcement deadline reaches, all the applications will automatically get added to the review panel</inlineHelpText>
        <label>Auto Assign Submitted Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Headed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Panels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DaysLeft__c</fullName>
        <formula>IF((EndDate__c )&gt; TODAY() ,(EndDate__c) - TODAY(),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description  (Obsolete)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DueDateOffset__c</fullName>
        <inlineHelpText>Offset is used to decide the due date when the Task Due Date is selected as Today + Offset</inlineHelpText>
        <label>Due Date Offset</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExcludeFromScoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will decide whether the Panel should be used in Scoring matrix</description>
        <inlineHelpText>This field will decide whether the Panel should be used in Scoring matrix</inlineHelpText>
        <label>Exclude From Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <inlineHelpText>When Announcement deadline reaches all the applications will be assigned to the users under this group Id.</inlineHelpText>
        <label>Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <inlineHelpText>When Announcement deadline reaches all the applications will be assigned to the users under this group.</inlineHelpText>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideAddBtn__c</fullName>
        <formula>ISPICKVAL(ReviewStep__r.Status__c,&apos;Not Started&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAddBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAddReviewer__c</fullName>
        <formula>IF(ReviewStep__r.ReviewGroup__r.Announcement__r.OrganizationName__c = &apos;USBE&apos;, ReviewStep__r.ReviewGroup__r.OwnerId != $User.Id, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAddReviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDeleteButton__c</fullName>
        <formula>IsDefaultPanel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Delete Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePanelActions__c</fullName>
        <formula>NOT(ISPICKVAL(ReviewStep__r.Status__c,&apos;Not Started&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Panel Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideViewPanel__c</fullName>
        <formula>IF(EndDate__c!= null,True,True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideViewPanel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsDefaultPanel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Panel?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExternalReviewStep__c</fullName>
        <formula>IF( ReviewStep__r.StepNumber__c == 2, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is External Review Step?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReviewScoreQuestionsAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Review Score Questions(Obsolete)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotExternalReviewStep__c</fullName>
        <formula>IF( ReviewStep__r.StepNumber__c == 2, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not External Review Step?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PanelLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which layout is used to render the review panel?</inlineHelpText>
        <label>Panel Layout</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipLabel>Review Panels</relationshipLabel>
        <relationshipName>Review_Panels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PanelName__c</fullName>
        <label>Panel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReviewFormConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Form Config</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipLabel>Review Panels (Review Form Config)</relationshipLabel>
        <relationshipName>Review_Panels1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewPackage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Review Form</label>
        <referenceTo>GNT__Package__c</referenceTo>
        <relationshipLabel>Review Panels</relationshipLabel>
        <relationshipName>Review_Panels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewPanelForApplication__c</fullName>
        <formula>IF( RecordType.Name == &apos;Application&apos;, true, false)</formula>
        <label>Review Panel For Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewPanelForPreApplication__c</fullName>
        <formula>IF( RecordType.Name == &apos;Pre-Application&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Panel For Pre-Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewPanelTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Panel Template</label>
        <referenceTo>ReviewPanelTemplate__c</referenceTo>
        <relationshipLabel>Review Panels</relationshipLabel>
        <relationshipName>Review_Panels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewStepName__c</fullName>
        <formula>ReviewStep__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Step Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStep__c</fullName>
        <label>Review Step</label>
        <referenceTo>ReviewStep__c</referenceTo>
        <relationshipLabel>Review Panels</relationshipLabel>
        <relationshipName>Review_Panels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReviewerAssignNotificationTemplate__c</fullName>
        <inlineHelpText>This email template is used to send email notification to the reviewer to review the Application or PreApplication</inlineHelpText>
        <label>Reviewer Assign Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewersCount__c</fullName>
        <label>No. of Reviewers</label>
        <summaryForeignKey>PanelUser__c.ReviewPanel__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskDueDate__c</fullName>
        <inlineHelpText>Specify due date for the review tasks created under this review panel</inlineHelpText>
        <label>Task Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Panel End Date</fullName>
                    <default>true</default>
                    <label>Panel End Date</label>
                </value>
                <value>
                    <fullName>Today + Offset Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Review Panel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ReviewStep__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>all_with_all</fullName>
        <columns>NAME</columns>
        <columns>ReviewPackage__c</columns>
        <columns>ReviewPanelForApplication__c</columns>
        <columns>ReviewPanelForPreApplication__c</columns>
        <columns>ReviewPanelTemplate__c</columns>
        <columns>ReviewStep__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>all with all</label>
    </listViews>
    <nameField>
        <displayFormat>Panel-{000}</displayFormat>
        <label>Review Panel ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Panels</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Application</fullName>
        <active>true</active>
        <label>Pre-Application</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Review_Due_date_cant_be_less_than_today</fullName>
        <active>true</active>
        <errorConditionFormula>AND(EndDate__c &lt; TODAY(), TEXT(ReviewStep__r.Status__c) = &apos;Not Started&apos;)</errorConditionFormula>
        <errorMessage>Review due date can not be less than today.</errorMessage>
    </validationRules>
</CustomObject>